prevent project box description cutoff

--- a/portfolio-ui/src/app/projects/projects.component.scss
+++ b/portfolio-ui/src/app/projects/projects.component.scss
@@ -10,6 +10,7 @@
   z-index: 2;
   transition-property: visibility, height, opacity;
   transition: 0.5s ease-in-out;
+  overflow-y: scroll;
 }
 
 .slide-down-div div {
